--- a/stack.yaml
+++ b/stack.yaml
@@ -17,8 +17,10 @@
 #
 # snapshot: ./custom-snapshot.yaml
 # snapshot: https://example.com/snapshots/2024-01-01.yaml
-snapshot:
-  url: https://raw.githubusercontent.com/commercialhaskell/stackage-snapshots/master/lts/23/10.yaml
+resolver: lts-21.25  # GHC 9.4.8を使用するLTS
+# 元の設定:
+# snapshot:
+#   url: https://raw.githubusercontent.com/commercialhaskell/stackage-snapshots/master/lts/23/10.yaml
 
 # User packages to be built.
 # Various formats can be used as shown in the example below.
