--- a/sample.cabal
+++ b/sample.cabal
@@ -25,7 +25,10 @@ source-repository head
 
 library
   exposed-modules:
+      Geometry
       Lib
+      Math
+      Random
   other-modules:
       Paths_sample
   autogen-modules:
@@ -57,6 +60,7 @@ test-suite sample-test
   type: exitcode-stdio-1.0
   main-is: Spec.hs
   other-modules:
+      RandomSpec
       Paths_sample
   autogen-modules:
       Paths_sample
@@ -65,6 +69,7 @@ test-suite sample-test
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       base >=4.7 && <5
+    , hspec
     , random
     , sample
   default-language: Haskell2010
